--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,19 @@
     <string name="salvar">Salvar</string>
 
     <!-- MENSAGEM -->
-    <string name="salvo_sucesso">Salvo com sucesso</string>
     <string name="digite_seu_nome">Digite seu Nome</string>
     <string name="digite_seu_email">Digite seu E-mail</string>
     <string name="digite_seu_telefone">Digite se Telefone</string>
     <string name="nao_foi_possivel_salvar">Não foi possível salvar</string>
-    <string name="salvo_com_sucesso">Salvo com sucesso</string>
+    <string name="salvo_com_sucesso">Salvo com sucesso!</string>
+    <string name="apagado_sucesso">Apagado com Sucesso!</string>
+    <string name="deseja_apagar">Deseja realmente apagar?</string>
+    <string name="sim">Sim</string>
+    <string name="nao">Não</string>
+
+    <!-- OPÇÕES MENU -->
+    <string name="ligar">Ligar</string>
+    <string name="enviar_email">Enviar E-mail</string>
+    <string name="apagar">Apagar</string>
+
 </resources>
